--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  4;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /dev/stderr warn;
 pid        /var/run/nginx.pid;
 
 events {
@@ -17,8 +17,6 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
-
     sendfile        on;
     #tcp_nopush     on;
 
@@ -33,7 +31,7 @@ http {
 
     server {
         listen 80 default_server;
-        access_log /var/log/nginx/images-access.log main;
+        access_log /dev/stdout main;
 
         location / {
             root /usr/share/nginx/html;
