--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     restart: always
     environment:
       APP_BACKEND_URL: https://proxy.bananaz.tech/api/configs/
-      APP_BACKEND_API_KEY: 2JCt2CjGA57T6GHhxDHJstqJx2ENvZhvvZ3trsTCSwK5HSCZ8N
+      APP_BACKEND_API_KEY: abcdefg
     ports:
       - "8013:80"
     volumes:
